tests/errors/null_deref.solar
fn main() {
  let z: &?Int = null#[Int];
  println(z@);
}
